Closed Bug 725036 Opened 12 years ago Closed 12 years ago

'perspective' property doesn't reject negative numbers

Categories

(Core :: CSS Parsing and Computation, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla13

People

(Reporter: ayg, Assigned: ayg)

References

Details

(Whiteboard: [inbound])

Attachments

(1 file)

Bug 505115 part 18 fixed this for the perspective() function, but not for the 'perspective' property.
Attached patch PatchSplinter Review
Mochitests in layout/style/test/ all pass on my machine.  Didn't push to tryservers because my account hasn't been created yet.
Attachment #595117 - Flags: review?(matt.woodrow)
Attachment #595117 - Flags: review?(matt.woodrow) → review+
Keywords: checkin-needed
Whiteboard: [autoland]
Whiteboard: [autoland] → [autoland-in-queue]
Autoland Patchset:
	Patches: 595117
	Branch: mozilla-central => try
	Destination: http://hg.mozilla.org/try/rev/8472b2cb12d8
Try run started, revision 8472b2cb12d8. To cancel or monitor the job, see: https://tbpl.mozilla.org/?tree=Try&rev=8472b2cb12d8
Try run for 8472b2cb12d8 is complete.
Detailed breakdown of the results available here:
    https://tbpl.mozilla.org/?tree=Try&rev=8472b2cb12d8
Results (out of 210 total builds):
    success: 183
    warnings: 20
    other: 7
Builds (or logs if builds failed) available at:
http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/autolanduser@mozilla.com-8472b2cb12d8
 Timed out after 06 hours without completing.
Whiteboard: [autoland-in-queue]
All the failures look unrelated -- some are filed as intermittent failures, and some memory leaks on Win debug.  And a timeout on Android opt C1.
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/3bcf2388db18
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla13
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: