Bug 725036 - 'perspective' property doesn't reject negative numbers r=matt.woodrow