layout/style/test/property_database.js
@@ -1082,9 +1082,9 @@ var gCSSProperties = {
 		domProp: "MozPerspective",
 		inherited: false,
 		type: CSS_TYPE_LONGHAND,
-		initial_values: [ "none", "0" ],
-		other_values: [ "1000px", "500.2px", "-100px", "-27.2em" ],
-		invalid_values: [ "pants", "200" ]
+		initial_values: [ "none" ],
+		other_values: [ "1000px", "500.2px" ],
+		invalid_values: [ "pants", "200", "0", "-100px", "-27.2em" ]
 	},
     "-moz-backface-visibility": {
         domProp: "MozBackfaceVisibility",
